; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_dev.c_dev_new_index.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_dev.c_dev_new_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net = type { i32 }

@dev_new_index.ifindex = internal global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net*)* @dev_new_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dev_new_index(%struct.net* %0) #0 {
  %2 = alloca %struct.net*, align 8
  store %struct.net* %0, %struct.net** %2, align 8
  br label %3

3:                                                ; preds = %15, %1
  %4 = load i32, i32* @dev_new_index.ifindex, align 4
  %5 = add nsw i32 %4, 1
  store i32 %5, i32* @dev_new_index.ifindex, align 4
  %6 = icmp sle i32 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %3
  store i32 1, i32* @dev_new_index.ifindex, align 4
  br label %8

8:                                                ; preds = %7, %3
  %9 = load %struct.net*, %struct.net** %2, align 8
  %10 = load i32, i32* @dev_new_index.ifindex, align 4
  %11 = call i32 @__dev_get_by_index(%struct.net* %9, i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %8
  %14 = load i32, i32* @dev_new_index.ifindex, align 4
  ret i32 %14

15:                                               ; preds = %8
  br label %3
}

declare dso_local i32 @__dev_get_by_index(%struct.net*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
